--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -3,13 +3,13 @@
 <hr>
 
 	<h3>About</h3>
-		<p><a href="/masthead.html">Editorial Board</a><br>
-		<a href="/submissions.html">Submission Guidelines</a><br>
-		<a href="/publication-ethics.html">Statement of Ethics</a></p>
+		<p><a href="{{site.baseurl}}/masthead.html">Editorial Board</a><br>
+		<a href="{{site.baseurl}}/submissions.html">Submission Guidelines</a><br>
+		<a href="{{site.baseurl}}/publication-ethics.html">Statement of Ethics</a></p>
 
 		<h3>Issues</h3>
-				<p><a href="/{{ site.current }}/">Current Issue</a><br>
-			<a href="/archive.html">Issue Archive</a><br>
-			<a href="/xsearch.html">Search</a></p>
+				<p><a href="{{site.baseurl}}/{{ site.current }}/">Current Issue</a><br>
+			<a href="{{site.baseurl}}/archive.html">Issue Archive</a><br>
+			<a href="{{site.baseurl}}/xsearch.html">Search</a></p>
 		
 </aside>
