--- a/_includes/issues.html
+++ b/_includes/issues.html
@@ -2,7 +2,7 @@
 	{% for ted in collection.label %}
         {% for page in site.[ted] %}
         	{% if page.index == true %}
-			<p><a href="/{{ ted }}">{{site.name}} {{ page.issue }}</a><br>
+			<p><a href="{{site.baseurl}}/{{ ted }}">{{site.name}} {{ page.issue }}</a><br>
 			<strong>{{ page.season }} {{ page.year }}</strong> . {{ page.topic }}<br>{{ page.subtopic }}</p>
 			{% endif %}
 		{% endfor %}
