--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -8,15 +8,15 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/">{{ site.name }}</a>
+        <a class="navbar-brand" href="{{site.baseurl}}/">{{ site.name }}</a>
       </div>
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-	        	  <li><a href="/{{ site.current }}/">Current issue</a></li>
+	        	  <li><a href="{{site.baseurl}}/{{ site.current }}/">Current issue</a></li>
 
 {% for page in site.pages %}
     {% if page.category contains 'meta' %}
-    <li><a href="{{ page.url }}">{{ page.menuitem }}</a></li>
+    <li><a href="{{site.baseurl}}{{ page.url }}">{{ page.menuitem }}</a></li>
     {% endif %}
   {% endfor %}
 </ul>
