--- a/assets/css/sample.css
+++ b/assets/css/sample.css
@@ -124,7 +124,7 @@ code {
 margin-top:50px;
   width:100%;
   height:300px;
-  xxbackground-image: url('/assets/img/eye.jpg');
+  xxbackground-image: url('/assets/img/press.jpg');
   background-size:cover;
   background-color: #fefefe;
 }
