moved top level files to meta folder

--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -3,13 +3,13 @@
 <hr>
 
 	<h3>About</h3>
-		<p><a href="{{site.baseurl}}/masthead.html">Editorial Board</a><br>
-		<a href="{{site.baseurl}}/submissions.html">Submission Guidelines</a><br>
-		<a href="{{site.baseurl}}/publication-ethics.html">Statement of Ethics</a></p>
+		<p><a href="{{site.baseurl}}/meta/masthead.html">Editorial Board</a><br>
+		<a href="{{site.baseurl}}/meta/submissions.html">Submission Guidelines</a><br>
+		<a href="{{site.baseurl}}/meta/publication-ethics.html">Statement of Ethics</a></p>
 
 		<h3>Issues</h3>
 				<p><a href="{{site.baseurl}}/{{ site.current }}/">Current Issue</a><br>
-			<a href="{{site.baseurl}}/archive.html">Issue Archive</a><br>
-			<a href="{{site.baseurl}}/xsearch.html">Search</a></p>
+			<a href="{{site.baseurl}}/meta/archive.html">Issue Archive</a><br>
+			<a href="{{site.baseurl}}/meta/xsearch.html">Search</a></p>
 		
 </aside>
