--- a/_includes/metadata.html
+++ b/_includes/metadata.html
@@ -22,4 +22,4 @@
 <meta property="og:url" content="https://doi.org/{{site.DOI}}{{page.DOI}}" />
 <meta property="og:type" content="website" />
 <meta property="og:description" content="{{page.description}}" />
-<meta property="og:image" content="{{site.media_server}}{{page.media_path}}{{page.meta_image}}" />
+<meta property="og:image" content="{{site.media_server}}{{page.media[0].path}}{{page.media[0].default}}" />
