--- a/_includes/project.html
+++ b/_includes/project.html
@@ -8,5 +8,5 @@
 {% if include.exturl %}
 <p class="viewproject"><a href="{{page.external_path}}{{include.exturl}}" target="blank">{{include.message}}</a></p>
 {% else %}
-<p class="viewproject"><a href="{{site.media_server}}{{page.media_path}}{{include.url}}">{{include.message}}</a></p>
+<p class="viewproject"><a href="{{site.media_server}}{{page.media[0].path}}{{include.url}}">{{include.message}}</a></p>
 {% endif %}
