add orcid support

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,7 @@
 <!-- css -->
 <link rel="icon" href="{{site.baseurl}}/assets/site_images/sample.ico" type="image/png">
 <link rel="stylesheet" href="{{site.baseurl}}/assets/fonts/genericons/genericons.css">
+<link rel="stylesheet" href="{{site.baseurl}}/assets/fonts/academicons/css/academicons.min.css"/>
 <link rel="stylesheet" href="{{site.baseurl}}/assets/css/print.css" media="print">
 <link rel="stylesheet" href="{{site.baseurl}}/assets/css/sample.css" media="screen">       
 <link rel="shortcut icon" href="{{site.baseurl}}/assets/img/sample.ico">
