--- a/_layouts/feature.html
+++ b/_layouts/feature.html
@@ -37,14 +37,7 @@ layout: default
 
 </section>
 
-<aside>
-	<h4>About</h4>
+ {% include bio.html %}
 
-{% for author in page.bio %}
-{% assign name = site.data.bios[author] %}
-<p>{{name.bio}}</p>
-{% endfor %}
-
-</aside>
 
 </div>
