--- a/_layouts/feature.html
+++ b/_layouts/feature.html
@@ -22,8 +22,12 @@ layout: default
 
 <!--<img src="{{ site.media_server }}{{ page.media[0].path }}thum.jpg">-->
 <h1>{{ page.title }}</h1>
-{% for name in page.names %}
-<h4>{{name.role}} {{name.firstname}} {{name.lastname}}<br>{{name.affiliation}}</h4>
+{% for author in page.bio %}
+{% assign name = site.data.bios[author] %}
+
+<h4>{{name.role}} {{name.firstname}} {{name.lastname}}</strong>
+<br>{{name.affiliation}}
+</h4>
 {% endfor %}
 
 <hr>
