--- a/_includes/citation.html
+++ b/_includes/citation.html
@@ -2,33 +2,38 @@
 
 <p><strong>Citation</strong>: 
 
-{{page.bio.size}}<br>
-
 {% for author in page.bio %}
 
-	{% assign name = site.data.bios[author] %}
+{%- assign name = site.data.bios[author] -%}
 
-	{% if author == page.bio.first %}
-		<strong>{{name.lastname}}, {{name.firstname}}</strong>
+{% if author == page.bio.first %}
 
-	{% else %}
+{{name.lastname}}, {{name.firstname}}
 
-	{% if page.bio.size < 4 %}
+{%- else -%}
 
-		{% if page.bio.size == 2 %} and 
+{%- if page.bio.size < 4 -%}
 
-{% elsif page.bio.size == 3 and author != page.bio.last %},{% elsif page.bio.size == 3 and author == page.bio.last %}, and 
-	
-		{% endif %}
+{% if page.bio.size == 2 %} and
 
-		{{name.firstname}} {{name.lastname}}
+{% elsif page.bio.size == 3 and author != page.bio.last %}, 
 
-		{% endif %}
+{% elsif page.bio.size == 3 and author == page.bio.last %}, and 
 
-	{% endif %}
+{% endif %}
 
-{% endfor %}
+{{name.firstname}} {{name.lastname}}
 
-{% if page.bio.size > 3 %}, et. al{% endif %}. “{{page.title}}.” <em>{{site.name}}: {{site.description}}</em>, no. {{page.issue}}, {{page.year}}.<br><i class="ai ai-doi ai-1x"></i> <a href="https://doi.org/{{site.DOI}}{{page.DOI}}">https://doi.org/{{ site.DOI }}{{ page.DOI }}</a></p>
+{%- endif -%}
+
+{%- endif -%}
+
+{%- endfor -%}
+
+{% if page.bio.size > 3 %}, et. al
+
+{%- endif -%}
+
+. “{{page.title}}.” <em>{{site.name}}: {{site.description}}</em>, no. {{page.issue}}, {{page.year}}.<br><i class="ai ai-doi ai-1x"></i> <a href="https://doi.org/{{site.DOI}}{{page.DOI}}">https://doi.org/{{ site.DOI }}{{ page.DOI }}</a></p>
 
 
