--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -76,10 +76,10 @@ layout: default
 
 
 
+<!-- if you deposit issue level DOIs with crossref you might want to uncomment this. protip: don't deposit trailing slashes. Ask me why. -->
+<!--<h3 class="section">Issue Citation</h3>
 
-<h3 class="section">Issue Citation</h3>
-
-<p><strong>Citation</strong>: <em>{{site.name}}: {{site.description}}</em>, no. {{page.issue}}, {{page.year}}. <a href="https://doi.org/{{ site.DOI }}{{ page.DOI }}">doi:{{ site.DOI }}{{ page.DOI }}</a></p>
+<p><strong>Citation</strong>: <em>{{site.name}}: {{site.description}}</em>, no. {{page.issue}}, {{page.year}}. <a href="https://doi.org/{{ site.DOI }}{{ page.DOI }}">doi:{{ site.DOI }}{{ page.DOI }}</a></p>-->
 
 </section>
 
