Fix paths to assets

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,13 +6,13 @@
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
 
 <!-- css -->
-<link rel="icon" href="{{site.baseurl}}/assets/site_images/sample.ico" type="image/png">
+<link rel="icon" href="{{site.baseurl}}/assets/img/favicon.ico" type="image/png">
 <link rel="stylesheet" href="{{site.baseurl}}/assets/fonts/genericons/genericons.css">
 <link rel="stylesheet" href="{{site.baseurl}}/assets/fonts/academicons/css/academicons.min.css"/>
 <link rel="stylesheet" href="{{site.baseurl}}/assets/css/print.css" media="print">
 <link rel="stylesheet" href="{{site.baseurl}}/assets/css/sample.css" media="screen">       
-<link rel="shortcut icon" href="{{site.baseurl}}/assets/img/sample.ico">
-<link rel="apple-touch-icon" href="{{site.baseurl}}/assets/img/sample.png"> 
+<link rel="shortcut icon" href="{{site.baseurl}}/assets/img/favicon.ico">
+<link rel="apple-touch-icon" href="{{site.baseurl}}/assets/logo/jsys-logo.png"> 
            	
 <!-- footnote script. at end of essay, create footnotes list with <ol id="footnotes"> and <li class="footnote"> -->
 <script src="{{site.baseurl}}/assets/js/footnoted/footnoted.min.js"></script>
