--- a/assets/css/sample.css
+++ b/assets/css/sample.css
@@ -124,7 +124,7 @@ code {
   margin-top:50px;
   width:100%;
   height:300px;
-  background-image: url('/assets/img/press.jpg');
+  background-image: url('/website/assets/img/press.jpg');
   background-size:cover;
   background-color: #fefefe;
 }
