tryout the green color scheme

--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -30,7 +30,7 @@
       <!-- Article DOI (mandatory) -->
       {% if entry.doi %} 
       <a href="http://dx.doi.org/{{entry.doi}}">
-        <img src="https://img.shields.io/badge/DOI-{{entry.doi}}-blue"></a>
+        <img src="https://img.shields.io/badge/DOI-{{entry.doi}}-blue?labelColor=grey"></a>
       {% endif %}
       
       &nbsp;
