--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -97,16 +97,17 @@ h1, h2, h3, h4, h5, h6 {
  * Links
  */
 a {
-    color: $brand-color;
+    // color: darken($brand-color, 5%);
+    color: black;
     text-decoration: none;
 
-    &:visited {
-        color: darken($brand-color, 15%);
-    }
+    // &:visited {
+    //     color: darken($brand-color, 5%);
+    // }
 
     &:hover {
-        color: $text-color;
-        text-decoration: underline;
+        // color: $text-color;
+        color: darken($brand-color, 5%);
     }
 }
 
