-numbered list for papers - menu color now black

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -34,7 +34,7 @@
     }
 
     .page-link {
-        color: $text-color;
+        color: black;
         line-height: $base-line-height;
 
         // Gaps between nav items, but not on the first one
