--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,19 +4,19 @@
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
         <ul class="social-media-list">
-          <li><a href="http://github.com/jsysresearch">Website sources</a></li>
+          <li><a href="http://github.com/jsysresearch/website">Website sources</a></li>
         </ul>
       </div>
 
       <div class="footer-col footer-col-2">
         <ul class="social-media-list">
-          <li><a href="http://github.com/jsysresearch">JSys</a></li>
+          <li><a href="{{site.url}}">JSys</a></li>
         </ul>
       </div>
 
       <div class="footer-col footer-col-3">
         <ul class="social-media-list">
-          <li>ISSN XX-XX</li>
+          <li>ISSN 2770-5501</li>
         </ul>
       </div>
     </div>
