added ISSN register link in the footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,7 +16,7 @@
 
       <div class="footer-col footer-col-3">
         <ul class="social-media-list">
-          <li>ISSN 2770-5501</li>
+          <li><a href="https://portal.issn.org/resource/ISSN/2770-5501#" target="_blank">ISSN 2770-5501</a></li>
         </ul>
       </div>
     </div>
