added contact info

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,8 @@
 
       <div class="footer-col footer-col-2">
         <ul class="social-media-list">
-          <li><a href="{{site.url}}">JSys</a></li>
+          <!-- <li><a href="{{site.url}}">Contact</a></li> -->
+          <li><a href="/contact/">Contact</a></li>
         </ul>
       </div>
 
