--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -33,6 +33,10 @@
         display: none;
     }
 
+    a {
+        text-decoration: none;
+    }
+
     .page-link {
         color: black;
         line-height: $base-line-height;
@@ -96,6 +100,10 @@
 .site-footer {
     border-top: 1px solid $grey-color-light;
     padding: $spacing-unit 0;
+
+    a{
+        text-decoration: none;
+    }
 }
 
 .footer-heading {
