updated link style again

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -99,15 +99,16 @@ h1, h2, h3, h4, h5, h6 {
 a {
     // color: darken($brand-color, 5%);
     color: black;
-    text-decoration: underline dotted $text-color;
+    // text-decoration: underline dotted $text-color;
+    text-decoration: none;
 
     // &:visited {
     //     color: darken($brand-color, 5%);
     // }
 
     &:hover {
-        // color: $text-color;
         color: darken($brand-color, 5%);
+        background-color:#FFFF00;
     }
 }
 
