Revise editorial board -> reviewers, update assistant editors.

--- a/_layouts/special_cfp.html
+++ b/_layouts/special_cfp.html
@@ -52,7 +52,7 @@ layout: default
         </li>{% endfor %}
       </ul>
       
-      and its editorial board is composed of
+      and the reviewers are:
       <ul>
         {% for member in active_members %}
         <li>
@@ -73,7 +73,7 @@ layout: default
         </li>{% endfor %}
       </ul>
       
-      Editorial board members
+      Reviewers
       <ul>
         {% for member in former_members %}
         <li>
