--- a/_layouts/area_cfp.html
+++ b/_layouts/area_cfp.html
@@ -50,7 +50,7 @@ layout: default
         </li>{% endfor %}
       </ul>
       
-      and its editorial board is composed of
+      and the reviewers are:
       <ul>
         {% for member in active_members %}
         <li>
@@ -70,7 +70,7 @@ layout: default
         </li>{% endfor %}
       </ul>
       
-      Editorial board members
+      Reviewers
       <ul>
         {% for member in former_members %}
         <li>
